refactor: change app icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/images/icons/android/android-launchericon-192-192.png"
+    />
     <link rel="manifest" href="./manifest.json" />
 
     <!-- apple pwa config -->
